SecurityPOC/force-app/main/default/objects/Guard_Review__c/Guard_Review__c.object-meta.xml
<CustomObject>
    <label>Guard Review</label>
    <nameField>
        <label>Headline</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guard Reviews</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>