SecurityPOC/force-app/main/default/objects/Guard_Review__c/fields/Event__c.field-meta.xml
<CustomField>
    <fullName>Event__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Event</label>
    <referenceTo>Events__c</referenceTo>
    <relationshipLabel>Guard Reviews</relationshipLabel>
    <relationshipName>Guard_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>