SecurityPOC/force-app/main/default/objects/Guard_Review__c/fields/Guard_Name__c.field-meta.xml
<CustomField>
    <fullName>Guard_Name__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Guard Name</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Guard Record Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Guard Reviews</relationshipLabel>
    <relationshipName>Guard_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>