SecurityPOC/force-app/main/default/objects/Guard_Review__c/fields/Submitter__c.field-meta.xml
<CustomField>
    <fullName>Submitter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Submitter</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Guard Reviews (Submitter)</relationshipLabel>
    <relationshipName>Guard_Reviews1</relationshipName>
    <type>Lookup</type>
</CustomField>